Signed-off-by: zhang <419720775@qq.com>

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="GDIPlusManager.cpp" />
     <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="Sheet.cpp" />
+    <ClCompile Include="SkinnedBox.cpp" />
     <ClCompile Include="Surface.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="InputLayout.cpp" />
@@ -215,6 +216,7 @@
     <ClInclude Include="GDIPlusManager.h" />
     <ClInclude Include="Sampler.h" />
     <ClInclude Include="Sheet.h" />
+    <ClInclude Include="SkinnedBox.h" />
     <ClInclude Include="Surface.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IndexedTriangleList.h" />
