--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=647,18
+Pos=85,16
 Size=550,680
-Collapsed=1
+Collapsed=0
+
+[Window][Simulation Speed]
+Pos=383,111
+Size=338,92
+Collapsed=0
+
+[Window][Camera]
+Pos=167,215
+Size=495,226
+Collapsed=0
 
