--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -9,12 +9,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Simulation Speed]
-Pos=383,111
+Pos=488,18
 Size=338,92
 Collapsed=0
 
 [Window][Camera]
-Pos=167,215
+Pos=291,473
 Size=495,226
+Collapsed=0
+
+[Window][Light]
+Pos=60,60
+Size=72,140
 Collapsed=0
 
