Signed-off-by: zhang <419720775@qq.com>

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -134,6 +134,7 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <Optimization>Disabled</Optimization>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
